<resources>
    <string name="app_name">Биржа Мемов</string>
    <string name="app_name_transferred">Биржа \nМемов</string>

    <string name="error_loading_shops">Отсутствует подключение к интернету.</string>

    <string name="welcome">Добро пожаловать!</string>
    <string name="please_login_first">Пожалуйста, войдите в систему</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="email">Почта</string>
    <string name="join">Войти</string>
    <string name="error">Ошибка</string>
    <string name="register">Зарегистрироваться</string>
    <string name="likes_count">Лайков</string>
    <string name="likes">Лайков:</string>
    <string name="owner">Владелец:</string>
    <string name="subscribers">Подписчиков:</string>
    <string name="subscribers_count">Подписчиков</string>
    <string name="subscribe">Подписаться</string>
    <string name="back">Назад</string>
    <string name="send">Отправить</string>
    <string name="tag">Тэг</string>
    <string name="ready">Готово</string>
    <string name="ok">OK</string>
    <string name="understand">Понял</string>

    <string name="not_yet_registered">Ещё не зарегистрированы? \nНе может быть!</string>

    <string name="easter_egg_1">Эта пасхалка выпадает нечасто</string>
    <string name="easter_egg_3">Биржа \nПасхалок</string>

    <string name="login_error">Неверный логин</string>
    <string name="password_error">Неверный пароль</string>
    <string name="email_error">Неверная почта</string>
    <string name="email_taken_error">Почта уже занята</string>
    <string name="login_taken_error">Логин уже занят</string>
    <string name="sending_error">Ошибка при отправке</string>

    <string name="wrong_login_or_password">Неверный логин или пароль</string>
    <string name="registration_title">Регистрация на поездку в Орландо</string>

    <string name="confirm_email">Пожалуйста, подтвердите почту</string>
    <string name="email_not_confirmed">Почта не подтверждена!</string>
    <string name="email_maybe_not_confirmed">Ошибка. Возможно не подтверждена почта</string>
    <string name="no_internet_connection">Отсутствует интернет-соединение</string>

    <string name="read_more">Читать дальше</string>

    <!--REGISTRATION HINTS-->
    <string name="login_hint">Используйте только латинские символы и цифры</string>
    <string name="password_hint">Не менее шести символов. Только цифры и латинские символы</string>
    <string name="email_hint">Используйте настоящую почту. На неё придет подтверждение</string>

    <!--BOTTOM NAV MENU MORE-->
    <string name="more_new_post">Создать пост</string>
    <string name="more_settings">Настройки</string>

    <!--EDIT MEME FRAGMENT-->
    <string name="meme_text">Текст для мема</string>
    <string name="add_your_tags_here">А теперь добавьте тэгов</string>
    <string name="tags_hint">Подсказка: чем больше тэгов добавлено, тем лучше</string>
    <string name="add_tag">Добавить тэг</string>
    <string name="choose_image">Выбрать картинку</string>
    <string name="delete_image">удалить картинку</string>
    <string name="add_text">Добавить текст</string>
    <string name="to_settings">В настройки</string>
    <string name="grant_permission">Предоставьте разрешения!</string>
    <string name="success_sending">Мем успешно загружен!</string>
    <string name="too_many_tags">Слишком много тэгов!</string>

    <!--MEME TEXT BOTTOM SHEET-->
    <string name="text_size">Размер текста</string>
    <string name="text_settings">Настройки текста</string>
    <string name="text_centering">Центрирование текста</string>
    <string name="text_shadow_size">Величина тени</string>

    <!--ONBOARDING-->
    <string name="first_feed_open">Эта ваша лента мемов. Вы можете персонализировать её под себя.
        Для этого необходимо зайти в настройки приложения (Находится в самой правой вкладке меню).</string>
    <string name="first_new_post_open">Здесь вы загружаете ваши мемы. На картинки можно накладывать текст,
    а если вы забыли все сохранить - кнопка в правом верхнем углу вам поможет</string>
</resources>

