<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/registerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                android:text="@string/registration_title"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="24sp"/>

            <RelativeLayout
                android:id="@+id/loginContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerTitle"
                android:layout_marginLeft="20dp">

                <EditText
                    android:id="@+id/loginEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login"
                    android:inputType="textPersonName"/>

                <TextView
                    android:id="@+id/loginHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginEditText"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/login_hint"
                    android:textColor="@android:color/darker_gray"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/passwordContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginContainer"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/passwordHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/passwordEditText"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/password_hint"
                    android:textColor="@android:color/darker_gray"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/emailContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/passwordContainer"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

                <TextView
                    android:id="@+id/emailHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/emailEditText"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/email_hint"
                    android:textColor="@android:color/darker_gray"/>

            </RelativeLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailContainer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/register"/>

            <ProgressBar
                android:id="@+id/registerProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailContainer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:visibility="invisible"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>