<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/loginTopContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/sky"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/top_welcome_background"
                    android:elevation="1dp">

                </RelativeLayout>

                <ImageView
                    android:id="@+id/happyCloud"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:elevation="2dp"
                    app:srcCompat="@drawable/ic_happy_cloud"/>

                <TextView
                    android:id="@+id/memeExchange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:elevation="3dp"
                    android:text="@string/app_name_transferred"
                    android:textColor="@color/brightGray"
                    android:textSize="30sp"
                    fontPath="fonts/Roboto-BoldItalic.ttf"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/loginTextContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginTopContainer"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/welcome"
                    fontPath="fonts/Roboto-Bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/welcome"
                    android:textColor="@color/textColor"
                    android:textSize="32sp"/>

                <TextView
                    android:id="@+id/pleaseLoginFirst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/welcome"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/please_login_first"
                    android:textSize="18sp"
                    fontPath="fonts/Roboto-LightItalic.ttf"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/joinContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/loginTextContainer"
                android:paddingBottom="15dp">

                <EditText
                    android:id="@+id/loginEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/passwordEditText"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/login"
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginEditText"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

                <ProgressBar
                    android:id="@+id/loginProgressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/passwordEditText"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:visibility="invisible"/>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/passwordEditText"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/join"
                    android:textColor="@android:color/white"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/registerContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/joinContainer"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/notYetRegistered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginButton"
                    android:layout_centerHorizontal="true"
                    android:text="@string/not_yet_registered"
                    android:textAlignment="center"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/notYetRegistered"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/register"
                    android:textColor="@color/textColor"/>
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>