<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/memeImage"
            android:layout_width="390dp"
            android:layout_height="390dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backTextView"
            app:srcCompat="@color/gray"
            app:layout_constraintHorizontal_bias="0.444"/>

        <TextView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/back"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/backTextView"
            app:layout_constraintLeft_toRightOf="@+id/backTextView"
            app:layout_constraintTop_toTopOf="@+id/backTextView"
            app:layout_constraintVertical_bias="0.6"/>

        <ImageView
            android:id="@+id/backTextView"
            android:layout_width="34dp"
            android:layout_height="24dp"
            app:srcCompat="?attr/actionModeCloseDrawable"
            tools:layout_editor_absoluteX="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/memeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="textLongMessage"
            android:text="@string/meme_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/memeImage"/>

        <TextView
            android:id="@+id/addTagsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_your_tags_here"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/memeEditText"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/addTagsHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="6dp"
            android:text="@string/tags_hint"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintLeft_toLeftOf="@+id/addTagsText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addTagsText"/>

        <com.dpizarro.autolabel.library.AutoLabelUI
            android:id="@+id/label_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addTagsHint"/>

        <Button
            android:id="@+id/addTagButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/blue"
            android:text="@string/add_tag"
            android:textColor="@android:color/white"
            app:layout_constraintHorizontal_bias="0.21"
            app:layout_constraintLeft_toRightOf="@+id/tagEditText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tagEditText"/>

        <EditText
            android:id="@+id/tagEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/tag"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_view"/>

        <TextView
            android:id="@+id/sendMemeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/send"
            android:textColor="@color/blue"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintLeft_toLeftOf="@+id/addTagButton"
            app:layout_constraintRight_toRightOf="@+id/addTagButton"
            app:layout_constraintTop_toBottomOf="@+id/addTagButton"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>